# guppyc

./: .pre-commit-config.yaml  Cargo.toml  DEVELOPMENT.md  README.md  justfile  pyproject.toml  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
script/: compile_guppy.py
src/: cli.rs  compile.rs  main.rs
src/compile/: guppy.rs  hugr.rs  llvm.rs
test_files/: even_odd.py  planqc-1.py  planqc-2.py  planqc-3.py
