[package]
name = "guppyc"
version = "0.1.0"
license = "Apache-2.0"

readme = "README.md"
documentation = "https://docs.rs/guppyc/"
repository = "https://github.com/CQCL/guppyc"

description = "Compiler tools for the guppylang Quantum Programming Language."
keywords = ["quantum", "compiler", "quantinuum"]
categories = ["compilers"]

edition = "2024"
rust-version = "1.85"

[[bin]]
name = "guppyc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.30", features = ["derive", "cargo"] }
clap-verbosity-flag = "3.0.2"
derive_more = { version = "2.0.1", features = ["display", "error", "from"] }
itertools = "0.14.0"
hugr = { version = "0.14.3", features = ["llvm"] }
log = "0.4.25"
env_logger = "0.11.6"
strum = { version = "0.27.1", features = ["derive"] }
semver = "1.0.25"

[dev-dependencies]
insta = "1.42.1"
